# AOC

day_01/src/: i.txt  main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_06/src/: first.rs  main.rs  second.rs
