[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[profile.release]
lto = false
codegen-units = 1
opt-level = "z"
strip = "symbols"

[build]
rustflags = ["-C", "target-cpu=native"]
